# django-ninja-mcp

./: .gitignore  README.md  coverage.json  pyproject.toml
.github/workflows/: publish.yaml  publish.yml  test.yaml
ninja_mcp/: __init__.py  server.py  testing.py
ninja_mcp/openapi/: convert.py  utils.py
ninja_mcp/transport/: sse.py
tests/: conftest.py  test_basic_functionality.py  test_mcp_simple_app.py  test_sse_transport.py
tests/demo_project/demo/: settings.py  urls.py
tests/demo_project/multi_param/: api.py  asgi.py  manage.py  urls.py  wsgi.py
tests/demo_project/someapp/: api.py
tests/fixtures/: live_server.py  simple_app.py  types.py
